--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- Navigation -->
     <nav class="navcss navbar-default">
         <div class="contain">
-            <a class="nav-h1" href="#home">Simply Broccoli<span>Best Broccoli Recipes</span></a>
+            <a class="nav-h1" href="#home">Simply Broccoli<span>Web Design and Usability II</span></a>
         </div>
         <ul class="nav navbar-nav znav">
             <li><a href="#home">HOME</a></li>
-            <li><a href="#gallery">BROCCOLINI GALLERY</a></li>
+            <li><a href="#gallery"> GALLERY</a></li>
             <li><a href="#contact">CONTACT</a></li>
             <li><a href="#about">ABOUT</a></li>
         </ul>
@@ -29,8 +29,8 @@
     <!-- Home Section -->
     <section id="home">
         <div class="container">
-            <h1 class="pb-1">W.B. Recipes</h1>
-            <h2 class="p-5">FEATURING THE BEST BROCCOLINI DISHES</h2>
+            <h1 class="pb-1">Justin Hernandez's Recipes</h1>
+            <h2 class="p-5">(I assumed the name Wing B. on github)</h2>
             <a href="#gallery" class="bttn">BROWSE RECIPES</a>
         </div>
     </section>
@@ -39,7 +39,7 @@
 
     <section id="tagline">
         <div>
-            <h1 class="p-5">Welcome to Simply Broccoli!</h1>
+            <h1 class="p-5">Welcome to Usability II....of broccolini</h1>
         </div>
         <div class="text-group">
             <p>Think you know broccoli? Think again. I'm here to make broccolini the star of your plate because it deserves the spotlight. If you haven’t tried it yet, you’re seriously missing out.
@@ -66,7 +66,8 @@
             </div>
             <div class="col-md-4">
                 <img src="https://placehold.co/300x200" alt="broccolini3">
-                <h3>Broccolini Stir-fry</h3>
+                <h3>Hi Bridgette!</h3>
+                <p>Please let me know if you need the login for this website!</p>
             </div>
         </div>
         <div>
@@ -88,14 +89,14 @@
             <div class="form-group">
                 <textarea name="message" class="form-control" rows="4" placeholder="Message"></textarea>
             </div>
-            <button type="submit" class="btn btn-default">Send</button>
+            <button type="submit">not responsive</button>
         </form>
     </section>
 
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>&copy; 2025 Simply Broccoli. All rights reserved.</p>
+            <p>&copy; 2025 Justin Hernandez. All rights reserved.</p>
             <ul class="social-icon">
                 <li><a href="#" class="fab fa-facebook-f"></a></li>
                 <li><a href="#" class="fab fa-twitter"></a></li>
@@ -106,7 +107,7 @@
         <div id="about">
             <h2>About me</h2>
             <p>
-                Wing Broccolini
+                A student at NAIT
                 <!-- svg -->
                 <svg width="800px" height="800px" version="1.1" viewBox="0 0 512 512" xml:space="preserve"
                     xmlns="http://www.w3.org/2000/svg">
@@ -127,7 +128,7 @@
                         fill="#90BC42" />
                 </svg>
             </p>
-            <p>Hello everyone, my name is Wing Broccolini and I am passionate about learning different ways of preparing and enjoying broccolini. I've experimented with all kinds of Broccolis in so many ways, and honestly, it's one of the most versatile veggies you'll find. From grilling, steaming, to salting and even including it in a salad, it has become a household vegetable in my kitchen.</p>
+            <p>Hello, my name is not really Wing Broccolini and I am passionate about learning different ways of preparing and enjoying broccolini. I've experimented with all kinds of Broccolis in so many ways, and honestly, it's one of the most versatile veggies you'll find. From grilling, steaming, to salting and even including it in a salad, it has become a household vegetable in my kitchen.</p>
 
             <p>This is because what makes me most excited about broccolini is how easy it is to work with in almost every meal. It is healthy, tasty and can really enhance the flavor of any meal. On this site, I am going to be sharing some basic recipes that will help you include broccolini in your daily meals and eat healthy no matter what your cooking skills are.</p>
             
